--- a/templates/index.html
+++ b/templates/index.html
@@ -19,17 +19,24 @@
       <div class="col-xs-12">
         <div class="form-group">
           <label for="sentence">Sentence</label>
-          <input type="text" class="form-control" id="sentence" placeholder="Type the sentence which you want to diagram" onkeydown="onEnter(event, processSentence)" autofocus>
+          <div class="input-group">
+            <input type="text" class="form-control" id="sentence" placeholder="Type the sentence which you want to diagram" onkeydown="onEnter(event, processSentence)" autofocus>
+            <span class="input-group-btn">
+              <button class="btn btn-primary" type="button" onclick="processSentence()">Send</button>
+            </span>
+          </div>
         </div>
       </div>
     </div>
     <div class="row">
       <div class="col-xs-12">
-        <p><canvas id="draw" width="1000" height="452"></canvas></p>
+        <label>Diagram</label>
+        <p><canvas id="draw" width="1060" height="452"></canvas></p>
       </div>
     </div>
     <div class="row">
       <div class="col-xs-12">
+        <label for="sentence">Diagram size</label>
         <p><input id="range" type="range" min="0.5" max="2" step="0.1" value="1" onchange="drawSentences()"></p>
       </div>
     </div>
