--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>NLP Project</title>
+  <title>Diagramming Sentences</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -31,7 +31,8 @@
     <div class="row">
       <div class="col-xs-12">
         <label>Diagram</label>
-        <p><canvas id="draw" width="1060" height="452"></canvas></p>
+        <p><canvas id="draw" width="800" height="452"></canvas></p>
+        <p id="diagrams"></p>
       </div>
     </div>
     <div class="row">
