--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,5 +1,3 @@
-/*@import url('https://fonts.googleapis.com/css?family=Play');*/
-
 input::-moz-focus-inner {
 	padding: 0;
 	border: 0;
@@ -15,7 +13,7 @@ button::-moz-focus-inner {
 html, body {
 	margin: 0;
 	padding: 0;
-	font-family: 'Play' Arial, sans-serif;
+	font-family: Arial, sans-serif;
 	font-size: 16px;
 	font-weight: normal;
 }
