--- a/templates/index.html
+++ b/templates/index.html
@@ -35,12 +35,12 @@
         <p id="diagrams"></p>
       </div>
     </div>
-    <div class="row">
+    <!-- <div class="row">
       <div class="col-xs-12">
         <label for="sentence">Diagram size</label>
         <p><input id="range" type="range" min="0.5" max="2" step="0.1" value="1" onchange="drawSentences()"></p>
       </div>
-    </div>
+    </div> -->
   </div>
 </body>
 </html>
