--- a/templates/index.html
+++ b/templates/index.html
@@ -31,8 +31,8 @@
     <div class="row">
       <div class="col-xs-12">
         <label>Diagram</label>
-        <p><canvas id="draw" width="1060" height="452"></canvas></p>
-        <p id="diagrams"></p>
+        <p><canvas id="draw" width="20" height="20"></canvas></p>
+        <div id="diagrams"></div>
       </div>
     </div>
     <!-- <div class="row">
