--- a/templates/index.html
+++ b/templates/index.html
@@ -26,6 +26,7 @@
             </span>
           </div>
         </div>
+        <div id="alert-warning" class="alert alert-warning" role="alert" style="display: none;">Parsing results contain two or more disconnected sentence trees. The diagram may be invalid. Please, verify if you entered full sentence and it is grammatically correct.</div>
       </div>
     </div>
     <div class="row">
