--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,8 @@
 
   <script defer src="/static/js/jquery-3.2.1.min.js"></script>
   <script defer src="/static/js/bootstrap.min.js"></script>
-  <script defer src="/static/js/script.js"></script>
+  <script defer src="/static/js/reed-kellogg.js"></script>
+  <!-- <script defer src="/static/js/script.js"></script> -->
 </head>
 <body>
   <div class="wrapper">
