--- a/templates/index.html
+++ b/templates/index.html
@@ -12,6 +12,7 @@
   <script defer src="/static/js/jquery-3.2.1.min.js"></script>
   <script defer src="/static/js/bootstrap.min.js"></script>
   <script defer src="/static/js/reed-kellogg.js"></script>
+  <script> var debug = {{ debug }}; </script>
 </head>
 <body>
   <div class="wrapper">
