--- a/static/css/style.css
+++ b/static/css/style.css
@@ -14,7 +14,7 @@ html, body {
 	margin: 0;
 	padding: 0;
 	font-family: Arial, sans-serif;
-	font-size: 16px;
+	font-size: 15px;
 	font-weight: normal;
 }
 
@@ -59,70 +59,6 @@ body {
 	-webkit-flex-wrap: wrap;
 	-ms-flex-wrap: wrap;
 	flex-wrap: wrap;
-	-webkit-box-pack: center;
-	-webkit-justify-content: center;
-	-moz-box-pack: center;
-	-ms-flex-pack: center;
-	justify-content: center;
-}
-
-.flex-grow-1 {
-	-webkit-box-flex: 1;
-	-webkit-flex-grow: 1;
-	-ms-flex-positive: 1;
-	flex-grow: 1;
-}
-
-.flex-nowrap {
-	-webkit-flex-wrap: nowrap;
-	-ms-flex-wrap: nowrap;
-	flex-wrap: nowrap;
-}
-
-.block-center {
-	-webkit-box-pack: center;
-	-webkit-justify-content: center;
-	-moz-box-pack: center;
-	-ms-flex-pack: center;
-	justify-content: center;
-}
-
-.block-between {
-	-webkit-box-pack: justify;
-	-webkit-justify-content: space-between;
-	-moz-box-pack: justify;
-	-ms-flex-pack: justify;
-	justify-content: space-between;
-}
-
-.va-start {
-	-webkit-box-align: start;
-	-webkit-align-items: flex-start;
-	-moz-box-align: start;
-	-ms-flex-align: start;
-	align-items: flex-start;
-}
-
-.va-content-start {
-	-webkit-align-content: flex-start;
-	-ms-flex-line-pack: start;
-	align-content: flex-start;
-}
-
-.va-center {
-	-webkit-box-align: center;
-	-webkit-align-items: center;
-	-moz-box-align: center;
-	-ms-flex-align: center;
-	align-items: center;
-}
-
-.va-end {
-	-webkit-box-align: end;
-	-webkit-align-items: flex-end;
-	-moz-box-align: end;
-	-ms-flex-align: end;
-	align-items: flex-end;
 }
 
 #diagrams img {
@@ -130,3 +66,29 @@ body {
 	border: 1px solid #000;
 	margin: 30px auto;
 }
+
+.canvas-outer {
+	font: 15px Arial;
+	color: #000;
+	position: relative;
+	margin-bottom: 10px;
+}
+
+.tag {
+	position: absolute;
+	cursor: pointer;
+	padding: 2px 0;
+	padding-left: 3px;
+	border-radius: 3px;
+}
+
+.tag:hover {
+	background-color: #f9fb5c;
+}
+
+#tag-info {
+	opacity: 0;
+	transition: opacity 0.3s;
+}
+
+#part { vertical-align: top; }
