--- a/static/css/style.css
+++ b/static/css/style.css
@@ -11,6 +11,9 @@ button::-moz-focus-inner {
 }
 
 html, body {
+	line-height: 1.42857143;
+	color: #333;
+	box-sizing: border-box;
 	margin: 0;
 	padding: 0;
 	font-family: Arial, sans-serif;
@@ -18,8 +21,11 @@ html, body {
 	font-weight: normal;
 }
 
-div {
+div, label, input, button, span, ul, li {
 	font-family: inherit;
+	font-size: 15px;
+	font-weight: normal;
+	box-sizing: inherit;
 }
 
 body {
@@ -27,9 +33,7 @@ body {
 	-moz-osx-font-smoothing: grayscale;
 }
 
-#draw {
-	vertical-align: middle;
-}
+#draw { vertical-align: middle; }
 
 .border { border: 1px solid #000; }
 
@@ -40,10 +44,6 @@ body {
 =========== Глобальные классы ===========
 =========================================
 */
-.fa { vertical-align: baseline; }
-
-.fa::before { display: block; }
-
 .wrapper {
 	padding: 30px 20px;
 	max-width: 1100px;
@@ -56,9 +56,13 @@ body {
 	display: -moz-box;
 	display: -ms-flexbox;
 	display: flex;
-	-webkit-flex-wrap: wrap;
-	-ms-flex-wrap: wrap;
-	flex-wrap: wrap;
+}
+
+.flex-grow-1 {
+	-webkit-box-flex: 1;
+	-webkit-flex-grow: 1;
+	-ms-flex-positive: 1;
+	flex-grow: 1;
 }
 
 #diagrams img {
@@ -92,3 +96,70 @@ body {
 }
 
 #part { vertical-align: top; }
+
+.title {
+	display: block;
+	margin-bottom: 5px;
+	font-weight: bold;
+}
+
+.form-group {
+	margin-bottom: 15px;
+}
+
+.form-control {
+	border: 1px solid #ccc;
+	border-radius: 4px 0 0 4px;
+	padding: 6px 12px;
+	width: 100%;
+	height: 34px;
+	color: #555;
+	font-size: 14px;
+	transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+}
+
+.form-control:focus {
+	border-color: #66afe9;
+	outline: 0;
+	box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(102,175,233,.6);
+}
+
+.btn-primary {
+	background-color: #337ab7;
+	border: 1px solid #2e6da4;
+	color: #fff;
+	cursor: pointer;
+	padding: 6px 12px;
+	border-radius: 0 4px 4px 0;
+	font-size: 14px;
+}
+
+.btn-primary:hover {
+	background-color: #286090;
+	border-color: #204d74;
+}
+
+.panel {
+	border: 1px solid #bce8f1;
+	border-radius: 4px;
+	margin-bottom: 20px;
+}
+
+.panel-heading {
+	text-align: center;
+	color: #31708f;
+	background-color: #d9edf7;
+	border-bottom: 1px solid #bce8f1;
+}
+
+.panel-heading, .panel-item {
+	padding: 10px 15px;
+}
+
+.panel-item {
+	border-bottom: 1px solid #ddd;
+}
+
+.panel-item:last-of-type {
+	border-bottom: 0;
+}
