--- a/static/css/style.css
+++ b/static/css/style.css
@@ -13,6 +13,7 @@ button::-moz-focus-inner {
 html, body {
 	line-height: 1.42857143;
 	color: #333;
+	-webkit-box-sizing: border-box;
 	box-sizing: border-box;
 	margin: 0;
 	padding: 0;
@@ -25,6 +26,7 @@ div, label, input, button, span, ul, li {
 	font-family: inherit;
 	font-size: 15px;
 	font-weight: normal;
+	-webkit-box-sizing: inherit;
 	box-sizing: inherit;
 }
 
@@ -53,7 +55,6 @@ body {
 .flex {
 	display: -webkit-box;
 	display: -webkit-flex;
-	display: -moz-box;
 	display: -ms-flexbox;
 	display: flex;
 }
@@ -83,6 +84,7 @@ body {
 	cursor: pointer;
 	padding: 2px 0;
 	padding-left: 3px;
+	-webkit-border-radius: 3px;
 	border-radius: 3px;
 }
 
@@ -92,6 +94,8 @@ body {
 
 #tag-info {
 	opacity: 0;
+	-webkit-transition: opacity 0.3s;
+	-o-transition: opacity 0.3s;
 	transition: opacity 0.3s;
 }
 
@@ -109,18 +113,24 @@ body {
 
 .form-control {
 	border: 1px solid #ccc;
+	-webkit-border-radius: 4px 0 0 4px;
 	border-radius: 4px 0 0 4px;
 	padding: 6px 12px;
 	width: 100%;
 	height: 34px;
 	color: #555;
 	font-size: 14px;
+	-webkit-transition: border-color ease-in-out .15s, -webkit-box-shadow ease-in-out .15s;
+	transition: border-color ease-in-out .15s, -webkit-box-shadow ease-in-out .15s;
+	-o-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
 	transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+	transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s, -webkit-box-shadow ease-in-out .15s;
 }
 
 .form-control:focus {
 	border-color: #66afe9;
 	outline: 0;
+	-webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(102,175,233,.6);
 	box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(102,175,233,.6);
 }
 
@@ -130,6 +140,7 @@ body {
 	color: #fff;
 	cursor: pointer;
 	padding: 6px 12px;
+	-webkit-border-radius: 0 4px 4px 0;
 	border-radius: 0 4px 4px 0;
 	font-size: 14px;
 }
@@ -141,6 +152,7 @@ body {
 
 .panel {
 	border: 1px solid #bce8f1;
+	-webkit-border-radius: 4px;
 	border-radius: 4px;
 	margin-bottom: 20px;
 }
